remove prosa about deductible. (as boats now have deductible).

--- a/app/views/ads/_ad_input_copy.html.erb
+++ b/app/views/ads/_ad_input_copy.html.erb
@@ -9,7 +9,7 @@
     <h4>Verifisering</h4>
 
     <p>
-        Plendit verifiserer brukernes identitet med mobilnummer og e-post. I tillegg må alle leietakere få godkjent en gyldig form for legitimasjon. 
+        Plendit verifiserer brukernes identitet med mobilnummer og e-post. I tillegg må alle leietakere få godkjent en gyldig form for legitimasjon.
     </p>
 
     <h4>Betaling</h4>
@@ -21,7 +21,7 @@
 
     <p>
         <%= image_tag "logos/if_150x148.png", alt: "", class: "ad-input-copy__badge", size: "70x70" %>
-        Alt du leier ut på Plendit er forsikret av IF, som utleier har du ingen egenandel.
+        Alt du leier ut på Plendit er forsikret av IF.
         Les mer om din trygghet som utleier <%= link_to "her", Plendit::Application.config.x.customerservice.insurance_info, target: '_blank' %>.
 
     </p>
