--- a/app/views/misc/welcome.html.erb
+++ b/app/views/misc/welcome.html.erb
@@ -43,8 +43,7 @@
                         <h2>Skadeforsikring fra If</h2>
                         <p>
                             Slipp alle bekymringer. Alt du leier ut på
-                            Plendit blir forsikret av If og ved en skade har
-                            du som utleier ingen egenandel.
+                            Plendit blir forsikret av If.
                             <strong>
                                 <%= link_to 'Les mer om forsikring', Rails.configuration.x.customerservice.insurance_info, target: '_blank' %>.
                             </strong>
