--- a/app/views/misc/about.html.erb
+++ b/app/views/misc/about.html.erb
@@ -45,6 +45,14 @@
             <td><%= Plendit::Application.config.x.customerservice.email %></td>
         </tr>
         <tr>
+            <th>Kundesupport:</th>
+            <td><%= Plendit::Application.config.x.customerservice.phone_number %></td>
+        </tr>
+        <tr>
+            <th>Pressehenvendelser:</th>
+            <td><%= Plendit::Application.config.x.organization.press_contact_phone_number %></td>
+        </tr>
+        <tr>
             <th>Postadresse:</th>
             <td><%= Plendit::Application.config.x.organization.address %></td>
         </tr>
