--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -1,34 +1,17 @@
-<section class="front-search-block" style="background-image: url(<%= @hero_video[:still_small] %>)">
-    <div class="front-search-block__video-holder">
-        <video preload="auto" class="front-search-block__video" data-controller="videoTrigger" poster="<%= @hero_video[:still] %>">
-            <% unless @hero_video[:mp4].nil? %>
-                <source src="<%= @hero_video[:mp4] %>" type="video/mp4">
-            <% end  %>
-            <% unless @hero_video[:webm].nil? %>
-                <source src="<%= @hero_video[:webm] %>" type="video/webm">
-            <% end  %>
-        </video>
+<div class="white-front-block front-hero">
+    <h1 class="front-hero__title">Lei det du trenger</h1>
+
+    <div class="front-hero__buttons">
+        <%= button_to (t '.see_all_ads_button'), search_path, method: :get, form_class: 'u-inline', class: 'button button-primary u-push-down-only' %>
+        <%= button_to (t '.request_item_button'), search_path, method: :get, form_class: 'u-inline', class: 'button button-primary u-push-down-only' %>
     </div>
+</div>
 
-    <div class="front-search-block__splash">
-        <h1 class="front-search-block__title"><%= t '.splash_title' %></h1>
-        <p class="front-search-block__copy"></p>
-
-        <div class="front-search-block__input-holder">
-            <%= form_tag(search_path, method: :get, class: 'u-inline') do %>
-              <%= text_field_tag 'q', '', class: 'front-search-block__input', autofocus: true, placeholder: (t '.search_term_placeholder') %>
-              <%= submit_tag 'Søk', class: 'front-search-block__search-button button button-primary' %>
-            <% end %>
-        </div>
+<div class="white-front-block">
+    <div class="container front-topics-block">
+        <%= render partial: 'front_topics_box' %>
     </div>
-
-    <div class="front-search-block__create-box" >
-        <form action="<%= new_ad_path %>">
-            <button class="button button-primary" type="submit"><%= t '.rent_out_button' %></button>
-        </form>
-    </div>
-
-</section>
+</div>
 
 <div class="explainer-video-section">
     <details>
