--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -2,7 +2,8 @@
     <h1 class="front-hero__title">Lei det du trenger</h1>
 
     <div class="front-hero__buttons">
-        <%= button_to (t '.see_all_ads_button'), search_path, method: :get, form_class: 'u-inline', class: 'button button-primary u-push-down-only' %>
+        <%# fixme: paths on the buttons %>
+        <%= button_to (t '.rent_out_button'), search_path, method: :get, form_class: 'u-inline', class: 'button button-primary u-push-down-only' %>
         <%= button_to (t '.request_item_button'), search_path, method: :get, form_class: 'u-inline', class: 'button button-primary u-push-down-only' %>
     </div>
 </div>
