--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -3,8 +3,8 @@
 
     <div class="front-hero__buttons">
         <%# fixme: paths on the buttons %>
-        <%= button_to (t '.rent_out_button'), search_path, method: :get, form_class: 'u-inline', class: 'button button-primary u-push-down-only' %>
-        <%= button_to (t '.request_item_button'), search_path, method: :get, form_class: 'u-inline', class: 'button button-primary u-push-down-only' %>
+        <%= button_to (t '.rent_out_button'), search_path, method: :get, form_class: 'u-inline', class: 'button button-primary u-push-down-only front-hero__button' %>
+        <%= button_to (t '.request_item_button'), search_path, method: :get, form_class: 'u-inline', class: 'button button-primary u-push-down-only front-hero__button' %>
     </div>
 </div>
 
