--- a/app/views/misc/_front_topics_box.html.erb
+++ b/app/views/misc/_front_topics_box.html.erb
@@ -45,7 +45,9 @@
                      <% end %>
                 </div>
             </div>
-            <%= button_to 'Se alle translate me', search_path, method: :get, form_class: 'u-inline', class: 'button button-primary' %>
+            <%= button_to search_path, method: :get, form_class: 'u-inline', class: 'button button-primary' do %>
+                <%= (t '.see_all_ads') %>
+            <% end %>
 
         </div>
     </div>
