--- a/app/views/shared/_profile_quality_box.html.erb
+++ b/app/views/shared/_profile_quality_box.html.erb
@@ -34,6 +34,13 @@
 
     <div>
         <ol class="profile-quality-box__verifications-list">
+            <% if user.bankid_verified? %>
+                <li>
+                    <%= icon 'check', class: 'fa-lg profile-quality-box__icon' %>
+                    <span>BankID verifisert</span>
+                </li>
+            <% end %>
+
             <% if user.has_confirmed_id? %>
                 <li>
                     <%= icon 'check', class: 'fa-lg profile-quality-box__icon' %>
