--- a/app/views/misc/_front_topics_box.html.erb
+++ b/app/views/misc/_front_topics_box.html.erb
@@ -7,10 +7,10 @@
     }
 %>
 
-<div class="container">
+<div class="container front-topic-box">
     <div class="row">
-        <div class="twelve columns front-topic-box">
-            <div class="front-topic-box">
+        <div class="twelve columns">
+            <div>
                 <h2 class="front-topic-box__title">Inspirasjon</h2>
                 
                 <% if topics.size > 5 %>
@@ -48,7 +48,6 @@
             <%= button_to search_path, method: :get, form_class: 'u-inline', class: 'button button-primary' do %>
                 <%= (t '.see_all_ads') %>
             <% end %>
-
         </div>
     </div>
 </div>
