--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -12,6 +12,10 @@
     <%= render partial: 'front_topics_box' %>
 </div>
 
+<div>
+    <%= render partial: 'front_wishlist_box' %>
+</div>
+
 <div class="explainer-video-section">
     <details>
         <summary><span class="explainer-video-section__title button"><%= t '.explainer_video_summary' %></span></summary>
