--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -361,3 +361,17 @@
         }
     }
 }
+
+.front-wishlist-box {
+    background-color: white;
+    padding-top: $standard-spacing * 2;
+    padding-bottom: $standard-spacing * 2;
+    text-align: center;
+
+    &__copy {
+        max-width: 600px;
+        margin: auto;
+        padding-top: $standard-spacing;
+        padding-bottom: $standard-spacing;
+    }
+}
