--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -260,6 +260,11 @@
         text-align: center;
         padding-top: 60px;
         padding-bottom: 60px;
+
+        @media (max-width: $mobile) {
+            font-size: 2em;
+        }
+
     }
 
     &__buttons {
@@ -373,5 +378,6 @@
         margin: auto;
         padding-top: $standard-spacing;
         padding-bottom: $standard-spacing;
+        color: $color-gray-text;
     }
 }
