--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -2,9 +2,12 @@
     <h1 class="front-hero__title"><%= t '.splash_title'%></h1>
 
     <div class="front-hero__buttons">
-        <%# fixme: paths on the buttons %>
-        <%= button_to (t '.rent_out_button'), search_path, method: :get, form_class: 'u-inline', class: 'button button-primary u-push-down-only front-hero__button' %>
-        <%= button_to (t '.request_item_button'), search_path, method: :get, form_class: 'u-inline', class: 'button button-primary u-push-down-only front-hero__button' %>
+        <%= button_to (t '.rent_out_button'), new_ad_path,
+                method: :get, form_class: 'u-inline',
+                class: 'button button-primary u-push-down-only front-hero__button' %>
+        <%= button_to (t '.request_item_button'), search_path,
+                method: :get, form_class: 'u-inline',
+                class: 'button button-secondary u-push-down-only front-hero__button' %>
     </div>
 </div>
 
