--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -5,7 +5,8 @@
         <%= button_to (t '.rent_out_button'), new_ad_path,
                 method: :get, form_class: 'u-inline',
                 class: 'button button-primary u-push-down-only front-hero__button' %>
-        <%= button_to (t '.request_item_button'), search_path,
+        <%= button_to (t '.request_item_button'),
+                'https://docs.google.com/forms/d/1RqcPozjWaK8V7QTI3qhMbQn5HPtbxrkzE7ZxpISofUo/viewform',
                 method: :get, form_class: 'u-inline',
                 class: 'button button-secondary u-push-down-only front-hero__button' %>
     </div>
