--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -14,7 +14,7 @@
 </div>
 
 <div>
-    <%= render partial: 'front_topics_box' %>
+    <%= render partial: 'front_categories_box' %>
 </div>
 
 <div>
