small bugfix: now use categories in link from frontpage

--- a/app/views/misc/_front_categories_box.html.erb
+++ b/app/views/misc/_front_categories_box.html.erb
@@ -2,7 +2,7 @@
     topics = Rails.configuration.x.frontpage.categories
     topics = topics.map { |t|
         t[:style] = "background-image: url(#{image_path(t[:image])});"
-        t[:href] = search_path(tag: t[:tag])
+        t[:href] = search_path(category: [t[:category]])
         t
     }
 %>
