Better placeholder for thanks page with localization

--- a/app/views/wanted_item_request/thanks.html.erb
+++ b/app/views/wanted_item_request/thanks.html.erb
@@ -1,1 +1,12 @@
-asdfasdfasdfthanks
+<div class="container">
+    <div class="row">
+        <div class="twelve columns">
+        <h1><%= t '.title' %></h1>
+        <div>
+            <p>
+                <%= t '.copy' %>
+            </p>
+        </div>
+        </div>
+    </div>
+</div>
