revert frontpage to original, in the root route.
- add frontpage_new_a and frontpage_new_b routes/methods/templates for live prototyping new frontpages
- add pricing information to all frontpages

--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -145,6 +145,14 @@
     }
 }
 
+.pricing-section {
+    &__centerer {
+        max-width: 530px;
+        margin: 0 auto;
+        text-align: center;
+    }
+}
+
 .latest-ads {
     text-align: center;
 
