--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -1,8 +1,8 @@
 <div class="search-result-view-chooser" data-controller="responsiveSearchResult">
     <div class="search-result-view-chooser__inner">
         <div class="search-result-view-chooser__segment-holder">
-            <button data-show-list-toggle class="search-result-view-chooser__segment-button search-result-view-chooser__segment-button--left search-result-view-chooser__segment-button--selected">Vis treff</button>
-            <button data-show-map-toggle class="search-result-view-chooser__segment-button search-result-view-chooser__segment-button--right">Vis kart</button>
+            <button data-show-list-toggle class="search-result-view-chooser__segment-button search-result-view-chooser__segment-button--left">Vis treff</button>
+            <button data-show-map-toggle class="search-result-view-chooser__segment-button search-result-view-chooser__segment-button--right search-result-view-chooser__segment-button--selected">Vis kart</button>
         </div>
         <%= render partial: 'search_title_box' %>
     </div>
