--- a/app/views/misc/frontpage_new_b.html.erb
+++ b/app/views/misc/frontpage_new_b.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <div>
-    <%= render partial: 'front_categories_box' %>
+    <%= render partial: 'front_categories_box_minimalist' %>
 </div>
 
 <div>
