--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -581,6 +581,7 @@
         background-color: white;
         text-decoration: none;
         padding: 12px;
+        padding-top: 24px;
         vertical-align: top;
 
         @media (max-width: 420px) {
