Thanks page prose / style

--- a/app/views/wanted_item_request/thanks.html.erb
+++ b/app/views/wanted_item_request/thanks.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="container u-push-down">
     <div class="row">
         <div class="twelve columns">
         <h1><%= t '.title' %></h1>
         <div>
-            <p>
+            <p class="u-push-down-only">
                 <%= t '.copy' %>
             </p>
         </div>
