Link to search after adding request

--- a/app/views/wanted_item_request/thanks.html.erb
+++ b/app/views/wanted_item_request/thanks.html.erb
@@ -6,6 +6,9 @@
             <p class="u-push-down-only">
                 <%= t '.copy' %>
             </p>
+            <p>
+                <%= link_to (t '.link'), search_path %>
+            </p>
         </div>
         </div>
     </div>
