--- a/app/views/application/_facebook_sdk.html.erb
+++ b/app/views/application/_facebook_sdk.html.erb
@@ -7,11 +7,15 @@ mylocales = {
 
 fb_language = mylocales[I18n.locale] || 'nb_NO'
 -%>
-<script>(function(d, s, id) {
+<script>
+function initFb(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
   js.src = "//connect.facebook.net/<%= fb_language %>/sdk.js#xfbml=1&version=v2.4&appId=<%= ENV['PCONF_FACEBOOK_APP_ID'] %>";
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));
+}
+window.setTimeout(function() {
+  initFb(document, 'script', 'facebook-jssdk');
+}, 200);
 </script>
